monitoring/kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-monitoring
  namespace: sharedservices
  labels:
    app: prometheus-monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-monitoring
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: prometheus-monitoring
        securityContext:
          privileged: true
        image: prom/prometheus:v2.1.0
        imagePullPolicy: Always
        command:
          - "/bin/sh"
          - "-c"
          - >
            set -x;
            /bin/prometheus --web.enable-lifecycle --config.file=/mnt/monitoring/prometheus/prometheus/prometheus.yaml --storage.tsdb.no-lockfile
        securityContext:
          privileged: true
        ports:
        - containerPort: 9090
          name: prometheus
          protocol: TCP
#        - containerPort: 3000
#          name: grafana
#          protocol: TCP
        volumeMounts:
        - name: monitoring-efs-volume
          mountPath: /mnt
        - name: data-volume
          mountPath: /prometheus/data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: prometheus-monitoring-ssd
      - name: monitoring-efs-volume
        persistentVolumeClaim:
          claimName: monitoring-efs-pvc
