monitoring/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-monitoring
  namespace: sharedservices
  labels:
    name: prometheus-monitoring
spec:
  ports:
  - name: prometheus-monitoring-port
    port: 9090
    protocol: TCP
  selector:
    component: prometheus-monitoring
